modify transaction and api.php
